--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,7 @@ APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgres://user:pass@localhost:5432/dbname
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
