--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
+CORS_ALLOWED_DOMAINS=*
 
 DATABASE_URL=postgres://user:pass@localhost:5432/dbname
-
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+LOG_CHANNEL=stack
